--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "pug": "^2.0.0-beta11",
     "vue": "^2.1.10"
   },
   "devDependencies": {
