--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "author": "Ronja Kääriäinen",
   "private": true,
   "scripts": {
+    "start": "node poem.js",
+    "postintall": "npm run build",
     "dev": "node build/dev-server.js",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.22.0",
     "pug": "^2.0.0-beta11",
-    "vue": "^2.1.10"
+    "vue": "^2.1.10",
+    "express": "^4.14.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -24,7 +28,6 @@
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.26.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.2",
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
