--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "aws-sdk": "^2.22.0",
+    "body-parser": "^1.17.0",
+    "express": "^4.14.1",
     "pug": "^2.0.0-beta11",
-    "vue": "^2.1.10",
-    "express": "^4.14.1"
+    "vue": "^2.1.10"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
