Using Heroku env variable instead of a config file. Removed the previously used key.

--- a/AWSconfig.json
+++ b/AWSconfig.json
@@ -1,1 +1,1 @@
-{ "accessKeyId": "AKIAI4KWRBHI5P5LPGSQ", "secretAccessKey": "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" }
+{ "accessKeyId": process.env.S3_KEY_ID, "secretAccessKey": process.env.S3_KEY }
